chore: modify recoverCells